upgrade congo and add ir-overview
Signed-off-by: Mercurio <signormercurio@gmail.com>

--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -13,7 +13,7 @@
       '//unpkg.com/@waline/emojis@1.1.0/tw-emoji',
     ],
     search: false,
-    reaction: true,
+    reaction: false,
     dark: 'auto',
   });
 </script>
